--- a/fiscalcalculetore.css
+++ b/fiscalcalculetore.css
@@ -21,7 +21,7 @@
         padding-top: 3em;
         text-align: left;
         font-size: larger;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-family: 'Courier New', Courier, monospace;
         border-color: black;
 
     }
